Fix center align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,16 +18,15 @@
 	color: white;
 }
 
-#intro-section .jumbotron > .title{
+#intro-section .vertical-center > .title{
 
-	margin-top: 130px;
 	text-transform: uppercase;
 	font-family: 'Lato', sans-serif;
 	font-size: 60px;
 	font-weight: 900;
 }
 
-#intro-section .jumbotron > .subtitle{
+#intro-section .vertical-center > .subtitle{
 
 	font-size: 20px;
 	font-family: 'Lato', sans-serif;
@@ -64,12 +63,10 @@
 
 .vertical-center{
 
-	height: 300px;
 	position: relative;
-	top: 50%;
-	transform: 			translateY(-50%);
+	top: 40%;
+	transform: translateY(-50%);
 }
-
 
 #typeform .typeform-widget{
 
